--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ body {
     padding: 20px;
     border: 1px solid #888;
     width: 60%; /* Adjusted width */
-    height: 80%;
+    height: 90%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5); /* Optional: Adds shadow */
     overflow: auto; /* In case the content is larger than the modal */
     animation: popIn 0.3s ease-out; /* Apply pop-in animation */
@@ -138,4 +138,29 @@ body {
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+
+ /* Add styles for the "Download Resume" link in the modal */
+.download-link {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    background-color: #3498db;
+    color: #fff;
+    border-radius: 50%;
+    transition: transform 0.3s, background-color 0.3s;
+}
+
+.download-link i {
+    font-size: 20px; /* Adjust the icon size as needed */
+}
+
+.download-link:hover {
+    transform: scale(1.1);
+    background-color: #2980b9; /* Change background color on hover */
 }
